--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -181,3 +181,30 @@ textarea {
 
 
 /* 总体样式 end */
+
+/* 尺寸 */
+.w-133{
+  width: 133px !important;
+}
+.w-160{
+  width: 160px !important;
+}
+.w-220{
+  width: 220px !important;
+}
+
+.w-320{
+  width: 320px !important;
+}
+
+.w-352{
+  width: 352px !important;
+}
+
+/* 重置 element ui */
+.el-table__header-wrapper th div{
+  text-align: center;
+}
+.el-table__row .cell{
+  text-align: center;
+}
