--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -232,6 +232,9 @@ textarea {
     .el-form-item{
       padding: 10px;
     }
+    .el-input{
+      padding: 10px;
+    }
   }
   .el-form-item.is-required .el-form-item__label:before{
     display: none;
