变表单新å新增了readoly，æ·y属性加了注释

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -215,6 +215,12 @@ textarea {
 .el-dialog__footer{
   text-align: center!important;
 }
+.el-input{
+  input:read-only{
+    background: #EEEEEE;
+    cursor: not-allowed;
+  }
+}
 
 /* 原生 表格样式 */
 .m-primordial-table{
