查询组件新增label，newline

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -221,6 +221,10 @@ textarea {
     cursor: not-allowed;
   }
 }
+.el-input--prefix .el-input__inner {
+  padding-left: 20px;
+}
+
 
 /* 原生 表格样式 */
 .m-primordial-table{
