readonly => disabled 开户申请模块

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -216,7 +216,7 @@ textarea {
   text-align: center!important;
 }
 .el-input{
-  input:read-only{
+  input:disabled{
     background: #EEEEEE;
     cursor: not-allowed;
   }
@@ -228,6 +228,7 @@ textarea {
 
 /* 原生 表格样式 */
 .m-primordial-table{
+  table-layout: fixed;
   &.el-table--border , &.el-table--group{
     border: none;
     border-right: 1px solid #ebeef5;
