--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -247,4 +247,9 @@ body {
   .el-form-item.is-required .el-form-item__label:before {
     display: none;
   }
+  /* 分隔符 */
+  .division{
+    visibility: hidden;
+    height: 30px;
+  }
 }
