案件列表、被申请人反馈、还款信息、仲裁委管理；table.vue添加分页；有分页bug和table初始化bug待解决！

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -253,3 +253,23 @@ body {
     height: 30px;
   }
 }
+
+
+.ctable_foot{
+  padding:20px 10px;
+}
+
+
+/* end */
+
+
+
+/* animate-style */
+.fade-enter-active, .fade-leave-active{
+  transition:opacity .5s;
+}
+
+.fade-enter, .fade-leave-to{
+  opacity: 0;
+}
+/* end */
