table支持图片，tableEdits支持文件上传，系新增客户案例，咨询管理

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -234,6 +234,9 @@ body {
   tr:hover {
     background-color: #f6f6f7;
   }
+  tr.table-edits td{
+    padding: 9px 10px !important;
+  }
   td {
     padding: 9px 0 !important;
     border: 1px solid #ebeef5;
