--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -301,6 +301,15 @@ body {
         line-height: 43px;
       }
     }
+    .cancel{
+      background:#0F357F;
+      color: #fff;
+    }
+    .confirm{
+      border-color: #D5D5D5;
+      background:#fff;
+      color: #666;
+    }
   }
   width: 493px !important;
   .el-message-box__content{
