--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -267,6 +267,10 @@ body {
     visibility: hidden;
     height: 30px;
   }
+  /* 下划线 */
+  .underline{
+    text-decoration: underline;
+  }
 }
 
 /* messagebox样式 */
