--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -273,23 +273,43 @@ body {
   }
 }
 
-/* messagebox样式 */
-.el-message-box, .el-dialog{
-  .el-message-box__header,.el-dialog__header{
+/* el-dialog */
+.el-dialog{
+  .el-dialog__header{
     background: #FAFAFC;
     border-bottom: 1px solid #E9EDF0;
-    .el-message-box__title{
-      color: #154097;
-      margin-top: -10px;
-    }
-    .el-message-box__headerbtn, .el-dialog__headerbtn{
+    .el-dialog__headerbtn{
       background: #909399;
       padding: 3px;
       border-radius: 50%;
       &:hover{
         background: #aaa;
       }
-      i.el-message-box__close.el-icon-close, i.el-dialog__close.el-icon-close{
+       i.el-dialog__close.el-icon-close{
+        color: #fff;
+        vertical-align: text-bottom;
+      }
+    }
+  }
+}
+
+/* messagebox样式 */
+.el-message-box {
+  .el-message-box__header,{
+    background: #FAFAFC;
+    border-bottom: 1px solid #E9EDF0;
+    .el-message-box__title{
+      color: #154097;
+      margin-top: -10px;
+    }
+    .el-message-box__headerbtn {
+      background: #909399;
+      padding: 3px;
+      border-radius: 50%;
+      &:hover{
+        background: #aaa;
+      }
+      i.el-message-box__close.el-icon-close{
         color: #fff;
         vertical-align: text-bottom;
       }
