--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -295,7 +295,7 @@ body {
 
 /* messagebox样式 */
 .el-message-box {
-  .el-message-box__header,{
+  .el-message-box__header{
     background: #FAFAFC;
     border-bottom: 1px solid #E9EDF0;
     .el-message-box__title{
