新增模块：订单加款【财务燃油】

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -367,3 +367,13 @@ body {
   opacity: 0;
 }
 /* end */
+
+
+/* 全局超链接样式 */
+.colLink{
+  color:$themeColor;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+/* end */
