--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -121,6 +121,12 @@ body {
     cursor: pointer;
     color: #0F357F;
   }
+  a{
+    color: #0F357F;
+  }
+  a:visited{
+    color: #0F357F;
+  }
 }
 
 /* 面包屑导航 start*/
