--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -243,7 +243,7 @@ body {
 }
 
 /* 原生 表格样式 */
-.table .el-table__row > td> div.cell{
+.table .el-table__row > td> div.cell> div{
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
