rap:立案申请-完成

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -51,6 +51,12 @@ body {
   .ml-10 {
     margin-left: 10px;
   }
+  .mt-8{
+    margin-top: 8px;
+  }
+  .mt-10{
+    margin-top: 10px;
+  }
   .mt-20 {
     margin-top: 20px;
   }
@@ -410,4 +416,12 @@ body {
   top: 50%;
 }
 
+/* end */
+
+
+/* 字体提示颜色 */
+.f_orange{
+  color:#FF9933;
+
+}
 /* end */
