--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -45,6 +45,9 @@ body {
   .mr-10 {
     margin-right: 10px;
   }
+  .mr-15 {
+    margin-right: 15px;
+  }
   .mb-10 {
     margin-bottom: 10px;
   }
