立案申请、小批次详情、大批次详情--完成度50%

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -54,9 +54,14 @@ body {
   .mt-8{
     margin-top: 8px;
   }
+
   .mt-10{
     margin-top: 10px;
   }
+  .mt-15 {
+    margin-top: 15px;
+  }
+
   .mt-20 {
     margin-top: 20px;
   }
@@ -414,6 +419,13 @@ body {
 }
 .el-message.center{
   top: 50%;
+}
+
+
+.btn_link {
+  color: $themeColor;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /* end */
