--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -440,3 +440,11 @@ body {
 
 }
 /* end */
+.audit{
+  .el-checkbox-group{
+    .el-checkbox{
+      width: 100%;
+      margin-left: 20px;
+    }
+  }
+}
