--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -448,3 +448,11 @@ body {
     }
   }
 }
+
+// element input style reset
+body{
+  .el-date-editor.el-input,
+  .el-date-editor.el-input__inner{
+    width: 100%;
+  }
+}
