--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -118,6 +118,8 @@ body {
     overflow: hidden!important;
     text-overflow: ellipsis!important;
     white-space: nowrap!important;
+    max-width: 100%;
+    display: inline-block;
   }
   /* 隐藏 */
   .fn-hide{
