--- a/src/assets/style/scss/base/_body.scss
+++ b/src/assets/style/scss/base/_body.scss
@@ -26,7 +26,10 @@ html,
 body {
     height: 100%;
     font-size: 14px;
-    @include customScrollBar;
+    // @include customScrollBar;
+    // overflow: auto;
+    overflow: hidden;
+    min-height: 100%;
 }
 
 ol,
