--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -371,6 +371,7 @@ body {
     }
   }
   .el-message-box__btns{
+    direction: rtl;
     .el-button{
       font-size: 16px;
       width: 98px;
@@ -379,6 +380,9 @@ body {
         height: 43px;
         line-height: 43px;
       }
+    }
+    .el-button:first-child{
+      margin-left: 10px;
     }
   }
   width: 493px !important;
