--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -2,8 +2,8 @@
 @import "base/reset";
 @import "base/body";
 @import "base/font";
-
 /* end */
+
 body {
   // 清除浮动
   .clear {
@@ -54,17 +54,15 @@ body {
   .ml-10 {
     margin-left: 10px;
   }
-  .mt-8{
+  .mt-8 {
     margin-top: 8px;
   }
-
-  .mt-10{
+  .mt-10 {
     margin-top: 10px;
   }
   .mt-15 {
     margin-top: 15px;
   }
-
   .mt-20 {
     margin-top: 20px;
   }
@@ -115,13 +113,13 @@ body {
   }
   /* 溢出 省略 */
   .ellipsis {
-    overflow: hidden!important;
-    text-overflow: ellipsis!important;
-    white-space: nowrap!important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+    white-space: nowrap !important;
     display: inline-block;
   }
   /* 隐藏 */
-  .fn-hide{
+  .fn-hide {
     display: none;
   }
   /* 居中 */
@@ -132,14 +130,14 @@ body {
     resize: none;
   }
   /* a标签 样式 _不带下划线 */
-  .fn-a{
+  .fn-a {
     cursor: pointer;
     color: #0F357F;
   }
-  a{
+  a {
     color: #0F357F;
   }
-  a:visited{
+  a:visited {
     color: #0F357F;
   }
 }
@@ -190,8 +188,9 @@ body {
   border: 1px solid #E9EDF0;
   border-bottom: none;
 }
-.item-title-sign::before{
-  content : '';
+
+.item-title-sign::before {
+  content: '';
   display: inline-block;
   width: 3px;
   height: 15px;
@@ -205,8 +204,9 @@ body {
   border: 1px solid #E9EDF0;
   border-top: none;
 }
-.icon-sign::before{
-  content : '';
+
+.icon-sign::before {
+  content: '';
   display: inline-block;
   width: 3px;
   height: 15px;
@@ -214,7 +214,8 @@ body {
   vertical-align: middle;
   margin-right: 10px;
 }
-.icon-sign{
+
+.icon-sign {
   font-weight: bold;
   color: #0F357F;
 }
@@ -263,7 +264,7 @@ body {
 
 .el-input {
   input:disabled {
-    background: #EEEEEE!important;
+    background: #EEEEEE !important;
     cursor: not-allowed;
   }
 }
@@ -272,19 +273,22 @@ body {
   padding-left: 20px;
 }
 
-.el-dialog__header{
+.el-dialog__header {
   text-align: center;
 }
-.el-table .has-gutter > tr > th{
+
+.el-table .has-gutter>tr>th {
   padding: 12px 0;
 }
 
 /* 原生 表格样式 */
-.table .el-table__row > td> div.cell> div{
+
+.table .el-table__row>td>div.cell>div {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
 .m-primordial-table {
   table-layout: fixed;
   &.el-table--border,
@@ -295,7 +299,7 @@ body {
   tr:hover {
     background-color: #f6f6f7;
   }
-  tr.table-edits td{
+  tr.table-edits td {
     padding: 9px 10px !important;
   }
   td {
@@ -315,32 +319,31 @@ body {
   .el-form-item.is-required .el-form-item__label:before {
     display: none;
   }
-
-
   /* 分隔符 */
-  .division{
+  .division {
     visibility: hidden;
     height: 30px;
   }
   /* 下划线 */
-  .underline{
+  .underline {
     text-decoration: underline;
   }
 }
 
 /* el-dialog */
-.el-dialog{
-  .el-dialog__header{
+
+.el-dialog {
+  .el-dialog__header {
     background: #FAFAFC;
     border-bottom: 1px solid #E9EDF0;
-    .el-dialog__headerbtn{
+    .el-dialog__headerbtn {
       background: #909399;
       padding: 3px;
       border-radius: 50%;
-      &:hover{
+      &:hover {
         background: #aaa;
       }
-       i.el-dialog__close.el-icon-close{
+      i.el-dialog__close.el-icon-close {
         color: #fff;
         vertical-align: text-bottom;
       }
@@ -349,11 +352,12 @@ body {
 }
 
 /* messagebox样式 */
+
 .el-message-box {
-  .el-message-box__header{
+  .el-message-box__header {
     background: #FAFAFC;
     border-bottom: 1px solid #E9EDF0;
-    .el-message-box__title{
+    .el-message-box__title {
       color: #154097;
       margin-top: -10px;
     }
@@ -361,74 +365,74 @@ body {
       background: #909399;
       padding: 3px;
       border-radius: 50%;
-      &:hover{
+      &:hover {
         background: #aaa;
       }
-      i.el-message-box__close.el-icon-close{
+      i.el-message-box__close.el-icon-close {
         color: #fff;
         vertical-align: text-bottom;
       }
     }
   }
-  .el-message-box__btns{
+  .el-message-box__btns {
     direction: rtl;
-    .el-button{
+    .el-button {
       font-size: 16px;
       width: 98px;
       padding: 0;
-      span{
+      span {
         height: 43px;
         line-height: 43px;
       }
     }
-    .el-button:first-child{
+    .el-button:first-child {
       margin-left: 10px;
     }
   }
   width: 493px !important;
-  .el-message-box__content{
+  .el-message-box__content {
     height: 178px;
     font-size: 16px;
-    display:flex;
-    vertical-align:middle;
-    align-items:center;
-    .el-message-box__message{
+    display: flex;
+    vertical-align: middle;
+    align-items: center;
+    .el-message-box__message {
       margin: 0 auto;
     }
   }
 }
 
-
-.ctable_foot{
-  padding:20px 10px;
+.ctable_foot {
+  padding: 20px 10px;
 }
 
-
 /* end */
-
-
 
 /* animate-style */
-.fade-enter-active, .fade-leave-active{
-  transition:opacity .5s;
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity .5s;
 }
 
-.fade-enter, .fade-leave-to{
+.fade-enter,
+.fade-leave-to {
   opacity: 0;
 }
+
 /* end */
 
-
 /* 全局超链接样式 */
-.colLink{
-  color:$themeColor;
+
+.colLink {
+  color: $themeColor;
   text-decoration: underline;
   cursor: pointer;
 }
-.el-message.center{
+
+.el-message.center {
   top: 50%;
 }
-
 
 .btn_link {
   color: $themeColor;
@@ -438,16 +442,17 @@ body {
 
 /* end */
 
-
 /* 字体提示颜色 */
-.f_orange{
-  color:#FF9933;
 
+.f_orange {
+  color: #FF9933;
 }
+
 /* end */
-.audit{
-  .el-checkbox-group{
-    .el-checkbox{
+
+.audit {
+  .el-checkbox-group {
+    .el-checkbox {
       width: 100%;
       margin-left: 20px;
     }
@@ -455,30 +460,64 @@ body {
 }
 
 // element input style reset
-body{
+body {
   .el-date-editor.el-input,
-  .el-date-editor.el-input__inner{
+  .el-date-editor.el-input__inner {
     width: 100%;
   }
 }
 
-
-input{
+input {
   line-height: 1;
 }
 
-
-.tableEdits{
-  .el-form-item{
+.tableEdits {
+  .el-form-item {
     margin-bottom: 0;
   }
 }
 
-body{
-  .body_container{
- @include customScrollBar;
-  height: 100%;
-  overflow: auto;
-  min-height: 100%;
+body {
+  .body_container {
+    @include customScrollBar;
+    height: 100%;
+    overflow: auto;
+    min-height: 100%;
+  }
+}
+
+// 所有弹窗下的input、textarea@禁用属性的样式全部清空
+.el-dialog {
+  .el-input__inner{
+    border:0 !important;
+    color:#606266 !important;
+  }
+  input[disabled="disabled"] {
+    &.el-input__inner {
+      border-color: transparent;
+      background-color: #fff !important;
+    }
+    &+.el-input__suffix {
+      .el-input__suffix-inner {
+        display: none;
+      }
+    }
+    .el-select {
+      .el-input.is-disabled {
+        .el-input__inner {
+          border-color: transparent !important;
+          &:hover {
+            border-color: transparent !important;
+          }
+        }
+      }
+    }
+  }
+  textarea[disabled="disabled"]{
+    &.el-textarea__inner{
+      border-color: transparent;
+      background-color: #fff !important;
+      color:#606266 !important;
+    }
   }
 }
