--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -272,6 +272,9 @@ body {
 .el-dialog__footer {
     text-align: center !important;
 }
+.el-table__expand-column{
+}
+
 
 .el-input {
     input:disabled {
