--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -586,7 +586,7 @@ input.el-input__inner {
     font-size: 16px;
   }
 }
-.rule_textarea textarea{
+.rule_textarea textarea, .textarea_warpar{
   font-family: YaHei Consolas Hybrid;
   font-style: italic;
 }
