規則庫新功能

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -590,3 +590,10 @@ input.el-input__inner {
   font-family: YaHei Consolas Hybrid;
   font-style: italic;
 }
+
+.self_checked_tree{
+  label.el-checkbox.is-disabled{
+    display: none;
+  }
+}
+
