--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -136,6 +136,7 @@ body {
     }
     textarea {
         resize: none;
+        font: 400 13.3333px Arial;
     }
     /* a标签 样式 _不带下划线 */
     .fn-a {
