--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -588,7 +588,7 @@ input.el-input__inner {
 }
 .rule_textarea textarea, .textarea_warpar,.gz-textarea .highlights,.gz-textarea textarea{
   font-family: YaHei Consolas Hybrid;
-  font-style: italic;
+  //font-style: italic;
 }
 
 .self_checked_tree{
