文书生成记录

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -602,3 +602,11 @@ textarea::-webkit-scrollbar {
   width: 6px;
 }
 
+.self_dialog{
+  .el-dialog__header{
+    padding: 0;
+  }
+  .el-dialog__headerbtn{
+    top: 8px;
+  }
+}
