规则库 修改

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -610,3 +610,21 @@ textarea::-webkit-scrollbar {
     top: 8px;
   }
 }
+
+.move-top-left{
+  transition: all 1s ease;
+  background:red;
+  position: absolute !important;
+  top: 15vh !important;
+  right: 50vw !important;
+  transform: translateX(50%);
+  &.active{
+    top: -80px !important;
+    right: calc(50vw - 660px) !important;
+    opacity: .3;
+    overflow: hidden;
+    margin: 0 !important;
+    transform: scale(0.2,0.2) !important;
+
+  }
+}
