規則庫和預審頁面優化

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -486,7 +486,7 @@ body {
     .el-checkbox-group {
         .el-checkbox {
             width: 100%;
-            margin-left: 20px;
+            margin-left: 0;
         }
     }
 }
