--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -95,6 +95,15 @@ body {
     .ml-30 {
         margin-left: 30px;
     }
+    .color-999{
+        color: #999;
+    }
+    .color-blue{
+        color: #193b8c;
+    }
+    .elm-scrollbar-wrap .el-scrollbar__bar.is-vertical{
+        width: 10px!important;
+    }
     /*字体大小*/
     .font-12 {
         font-size: 12px;
